--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.76MB/s(Youtube:不良林), server: hk6.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk6.ningmengshui.xyz}}
-  - {name: 🇨🇳 中国-8.61MB/s(Youtube:不良林), server: kr-cn-relay-1-452x4.dukou.info, port: 3301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-1-452x4.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.76MB/s(Youtube:不良林), server: tw-cn-hk-relay-2-184a76.dukou.info, port: 5302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: tw-cn-hk-relay-2-184a76.dukou.info, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.01MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: rnlax.looki.top, port: 12356, type: vmess, uuid: 4f7aac16-bafc-4bcc-8425-5b3afa67ba12, alterId: 66, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /090d1f06ee93/, ws-headers: {Host: rnlax.looki.top}}
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
-  - {name: 🇺🇸 美国-526.4KB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32453, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.25MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-17.02MB/s(Youtube:不良林), server: sg-cn-hk-relay-5-51f087.dukou.info, port: 9305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-5-51f087.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.10MB/s(Youtube:不良林), server: 198.57.27.184, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-2.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.76MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-526.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
