--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.25MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-17.02MB/s(Youtube:不良林), server: sg-cn-hk-relay-5-51f087.dukou.info, port: 9305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-5-51f087.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.10MB/s(Youtube:不良林), server: 198.57.27.184, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-6.78MB/s(Youtube:不良林), server: ru01-cu-1120.dukou.info, port: 2301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru01-cu-1120.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.15MB/s(Youtube:不良林), server: hk-route-12369-6.dukou.info, port: 8306, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-6.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: kr-cn-relay-2-32v22.dukou.info, port: 3302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-2-32v22.dukou.info, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-5.36MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-2.10MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-1.56MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇯🇵 日本-8.98MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
