--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-6.78MB/s(Youtube:不良林), server: ru01-cu-1120.dukou.info, port: 2301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru01-cu-1120.dukou.info, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 67us01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.78MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
   - {name: 🇨🇳 中国-7.15MB/s(Youtube:不良林), server: hk-route-12369-6.dukou.info, port: 8306, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-6.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.80MB/s(Youtube:不良林), server: kr-cn-relay-2-32v22.dukou.info, port: 3302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: kr-cn-relay-2-32v22.dukou.info, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-5.36MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 台湾-2.10MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-1.56MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇨🇳 台湾-2.30MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇭🇰 香港-3.96MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇯🇵 日本-8.98MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,36 +52,36 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -89,14 +89,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -105,14 +105,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -130,14 +130,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.78MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.80MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.10MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.56MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
 rules:
