--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-3.06MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 67us01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.78MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.41MB/s(Youtube:不良林), server: 142.4.101.137, port: 20561, type: vmess, uuid: cf3eb126-ffbf-4452-91de-7393b6028782, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nmLuM34N/, ws-headers: {Host: 142.4.101.137}}
-  - {name: 🇨🇳 中国-7.15MB/s(Youtube:不良林), server: hk-route-12369-6.dukou.info, port: 8306, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-6.dukou.info, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.25MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 台湾-2.30MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇭🇰 香港-3.96MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇯🇵 日本-8.98MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.97MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.02MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.05MB/s(Youtube:不良林), server: 198.57.27.184, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇸🇬 新加坡-3.98MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.54MB/s(Youtube:不良林), server: jpsv.project4gyuna.pw, port: 80, type: vmess, uuid: d1d4ad51-ad11-4648-ab28-08bc20db295a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /project4gyuna.pw, ws-headers: {Host: jpsv.project4gyuna.pw}}
+  - {name: 🇺🇸 美国-530.0KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.25MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.30MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.96MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
